--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       
       </nav>
       <div class="container">
-        <h1>My First Simplep Page</h1>
+        <h1>My First Simple Page</h1>
         <p>This is my profile.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur pariatur suscipit saepe voluptates odit dolores, nobis voluptatibus fugiat provident placeat! Natus voluptates fuga, sed quam, nihil aliquid id, quisquam aliquam non adipisci impedit dicta esse debitis. Nemo, ut mollitia ad officiis magnam sunt sapiente inventore, incidunt dignissimos ipsum, culpa quam!.</p>
       </div>
